--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon --exec node -r @swc-node/register ./src/index.ts",
     "dev": "npx nodemon --exec node -r @swc-node/register ./src/index.ts dev",
-    "tetris-start": "npx nodemon --exec node -r @swc-node/register ./src/index.tetris.ts",
-    "tetris-dev": "npx nodemon --exec node -r @swc-node/register ./src/index.tetris.ts dev"
+    "tetris-start": "npx nodemon --exec node -r @swc-node/register ./src/tetris/index.ts",
+    "tetris-dev": "npx nodemon --exec node -r @swc-node/register ./src/tetris/index.ts dev"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,10 @@
   "dependencies": {
     "@swc-node/register": "^1.6.6",
     "cookie-muncher": "github:Bluzzi/cookie-muncher",
+    "dayjs": "^1.11.9",
     "jimp": "^0.22.10",
-    "socket.io-client": "^4.7.1"
+    "socket.io-client": "^4.7.1",
+    "tintify": "^1.0.0"
   },
   "devDependencies": {
     "@bluzzi/eslint-config": "^1.1.0",
