--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "node -r @swc-node/register ./src/index.ts",
     "start": "npx nodemon --exec node -r @swc-node/register ./src/index.ts",
     "dev": "npx nodemon --exec node -r @swc-node/register ./src/index.ts dev",
+    "tetris-prod": "node -r @swc-node/register ./src/tetris/index.ts",
     "tetris-start": "npx nodemon --exec node -r @swc-node/register ./src/tetris/index.ts",
     "tetris-dev": "npx nodemon --exec node -r @swc-node/register ./src/tetris/index.ts dev"
   },
